<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/ic_bg"
    android:orientation="vertical"
    android:gravity="center">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/quiz_app"
        android:textStyle="bold"
        android:textSize="25sp"
        android:padding="16dp"
        android:textAlignment="center"
        android:textColor="@color/white"
        />

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:background="@color/white"
        app:cardCornerRadius="16dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/welcome"
                android:textStyle="bold"
                android:textSize="30sp"
                android:textAlignment="center"
                android:textColor="#363A43"
                android:gravity="center"
                />

            <TextView
                android:id="@+id/enterNameLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/please_enter_your_name"
                android:labelFor="@+id/nameInput"
                android:textStyle="bold"
                android:textSize="16sp"
                android:textAlignment="center"
                android:textColor="#363A43"
                android:gravity="center"
                android:layout_marginTop="16dp"
                />

           <com.google.android.material.textfield.TextInputLayout
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
               android:layout_marginTop="20dp"
               >

               <androidx.appcompat.widget.AppCompatEditText
               android:id="@+id/nameInput"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:hint="@string/your_name"
                   android:textColorHint="#7a8089"
                   android:inputType="textCapWords"
                   android:textColor="#363a43"
                   />

           </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/buttonStart"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/button_start"
                android:textColor="@color/white"
                android:textAllCaps="true"
                android:layout_marginTop="20dp"
                android:background="@color/design_default_color_primary"/>

        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

</LinearLayout>