<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="@drawable/ic_bg"
    >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/quiz_result"
        android:textColor="@color/white"
        android:gravity="center"
        android:textSize="36sp"
        android:textStyle="bold"
        />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_trophy"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Hey, Congratulations!"
        android:textColor="@color/white"
        android:gravity="center"
        android:textSize="16sp"
        android:layout_marginTop="16dp"
        />
    <TextView
        android:id="@+id/tv_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/user_name"
        android:textColor="@color/white"
        android:gravity="center"
        android:textSize="36sp"
        android:textStyle="bold"
        android:layout_marginVertical="16dp"
        />

        <TextView
            android:id="@+id/tv_score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0"
            android:textColor="@color/white"
            android:gravity="center"
            android:textSize="16sp"
            android:layout_marginHorizontal="8dp"
            />

    <Button
        android:id="@+id/btn_finish"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/finish"
        android:layout_marginHorizontal="16dp"
        android:paddingVertical="16dp"
        android:layout_marginVertical="16dp"/>

</LinearLayout>